--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "html-to-notion": "^0.2.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
