--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,7 +13,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.linkedin.com/jobs/view/*"],
+      "matches": ["https://*.linkedin.com/jobs/*"],
       "js": ["js/content-script.bundle.js"]
     }
   ],
